#############################################################################
BETA PUBLIC RELEASE VERSION 1.4.0       11-17-08
#############################################################################
 - NEW FEATURES
  * Updated html/master-index.html, deleted html/index.php.
  * Updated pydoc by running genpydoc.sh.
  * Added a whitespace option by by putting whitespaces between atom name
    and residue name, between x and y, and between y and z.
  * Added radius for Chlorine in ligff.py.
  * Added PEOEPB forcefield, data provided by Paul Czodrowski.
  * Updated inputgen.py to write out the electrostatic potential for APBS
    input file. 
  * Updated CHARMM.DAT with two sets of phosphoserine parameters.
  * Allowed amino acid chains with only one residue, using --assign-only 
    option.
  * Updated server.py.in so that the ligand option is also recorded in 
    usage.txt. 
  * Updated HE21, HE22 coordinates in GLN according to the results from 
    AMBER Leap program.
  * Updated Makefile.am with Manuel Prinz's patch (removed distclean2 and 
    appended its contents to distclean-local).
  * Updated configure.ac, pdb2pqr-opal.py; added AppService_client.py and 
    AppService_types.py with Samir Unni's changes.
  * Applied two patches from Manuel Prinz to pdb2pka/pMC_mult.h and 
    pdb2pka/ligand_topology.py. 
  * Updated PARSE.DAT with the source of parameters. 
  * Created a contrib folder with numpy-1.1.0 package. PDB2PQR will install 
    numpy by default unless any of the following conditions is met: 
      a. Working version of NumPy dectected by autoconf.
      b. User requests no installation with --disable-pdb2pka option.
      c. User specifies external NumPy installation.  
  * Merged Samir's branch. Now PDB2PQR Opal and APBS Opal services are 
    available.
  * Added error handling for residue name longer than 4 characters.
  * Updated hbond.py with Mike Bradley's definitions by default.